atualizado o backend, feito basico do front e integração quase completa
